# python-package-template

./: README.md  setup.cfg
etc/: download_lena.sh  examples.ipynb
src/packagename/: example.py
tests/: test_example.py
