[metadata]
name = packagename
version = 0.0.0
author = James Rowland
author_email = rowland.208@gmail.com
description = This repo is a template for creating new python packages
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rowland-208/python-package-template
project_urls =
    Bug Tracker = https://github.com/rowland-208/python-package-template/issues
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
install_requires =
    matplotlib
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src

# keep this section if your package contains supporting data
# each heading is a dir
# under each heading specify the files to include
# data dirs must contain __init__.py
[options.package_data]
packagename.data =
    example.json
packagename.data.images =
    *.png
